--- a/style.css
+++ b/style.css
@@ -317,3 +317,14 @@ section {
   margin-left: -20px;
   justify-content: right;
 }
+
+.menucard {
+  margin: auto;
+  width: 300px;
+  padding: 20px;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.price {
+  float: right;
+}
