--- a/newstyle.css
+++ b/newstyle.css
@@ -1,5 +1,5 @@
 body {
-  border: 1px solid rgb(94, 255, 0);
+  border: 0px solid rgb(94, 255, 0);
   width: auto;
   height: 100%;
 }
@@ -10,6 +10,8 @@ header {
   height: 100%;
   border: 0px solid rgb(94, 255, 0);
   justify-content: center;
+  width: 350px;
+  margin: auto;
 }
 
 article {
@@ -18,6 +20,8 @@ article {
   height: 100%;
   border: 0px solid rgb(94, 255, 0);
   justify-content: center;
+  width: 350px;
+  margin: auto;
 }
 
 nav {
@@ -74,7 +78,6 @@ nav {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 10px;
-  margin-top: 10px;
   margin-left: 15px;
   font-weight: bold;
   padding-top: 10px;
@@ -120,6 +123,7 @@ nav {
   height: 100%;
   justify-content: center;
   width: 350px;
+  height: 100px;
   background-color: #f3f2f2;
   margin: auto;
 }
@@ -129,12 +133,13 @@ nav {
 footer {
   display: flex;
   justify-content: left;
-  width: auto;
+  width: 290px;
   padding: 30px;
   background: #303030;
   flex-wrap: wrap;
   border: 0px solid rgb(255, 225, 0); /* border area */
-  margin-top: 30px;
+  margin-top: 0px;
+  margin: auto;
 }
 
 footer div {
