--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ h2 {
   opacity: 1;
   color: white;
   background-color: #ff79da;
-  background: linear-gradient(#ad00fd, 10%, #d526de);
+  background: linear-gradient(#af02ff, 10%, #d526de);
   border-radius: 20px 20px 20px 20px;
   box-shadow: 0px 5px 19px #240a25;
   width: auto;
@@ -100,7 +100,7 @@ nav {
 .greybutton {
   display: flex;
   justify-content: center;
-  padding: 25px 80px;
+  padding: 25px 60px;
   opacity: 1;
   font-weight: bold;
   color: rgb(0, 0, 0);
@@ -111,6 +111,82 @@ nav {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.fa-mobile-screen-button {
+  display: flex;
+  margin-right: 10px;
+  margin-top: 8px;
+}
+
+.fa-bars {
+  display: flex;
+  margin-right: 18px;
+  margin-top: 8px;
+}
+
+.fa-store {
+  display: flex;
+  margin-right: 18px;
+  margin-top: 8px;
+}
+
+.fa-1 {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: #9356dc;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 13px;
+  cursor: pointer;
+  margin-right: 320px;
+  margin-top: 115px;
+}
+
+.fa-2 {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: #9356dc;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 13px;
+  cursor: pointer;
+  margin-right: 318px;
+  margin-top: 205px;
+}
+
+.fa-3 {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: #9356dc;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 13px;
+  cursor: pointer;
+  margin-right: 318px;
+  margin-top: 295px;
+}
+
+.text1 {
+  display: none;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: #9356dc;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 13px;
+  cursor: pointer;
+  margin-right: 318px;
+  margin-top: 295px;
+}
+
 /* END NAV */
 /* START MAIN */
 
