--- a/index.css
+++ b/index.css
@@ -1,24 +1,33 @@
 body {
-  margin: auto;
+  border: 0px solid rgb(94, 255, 0);
+  width: 375px;
+  height: 100%;
   font-family: "Roboto", sans-serif;
+  margin: auto;
 }
 
 /* START HEADER */
 header {
   display: flex;
-  justify-content: center;
   width: 375px;
   margin: auto;
   box-shadow: 0px 5px 19px #999;
+  height: 50px;
 }
 
-#logo {
-  width: 100%;
+.logo {
+  display: flex;
+  width: 175px;
   max-width: 162px;
   margin-top: 25px;
   margin-bottom: 15px;
+  margin: auto;
 }
 
+#logo1 {
+  display: flex;
+  width: 100%;
+}
 /* END HEADER */
 
 /* START LOCATION */
@@ -85,6 +94,12 @@ h2 {
   margin-bottom: 40px;
 }
 
+.pinkbutton:hover {
+  display: flex;
+  cursor: pointer;
+  box-shadow: 0px 5px 30px 5px #ff79da; /*4*/
+}
+
 /* END ARTICLE */
 /* START NAV */
 
@@ -112,6 +127,12 @@ nav {
   margin-bottom: 10px;
 }
 
+.greybutton:hover {
+  display: flex;
+  cursor: pointer;
+  box-shadow: 0px 5px 30px 5px #ff79da; /*4*/
+}
+
 .fa-mobile-screen-button {
   display: flex;
   margin-right: 10px;
@@ -130,61 +151,14 @@ nav {
   margin-top: 8px;
 }
 
-.fa-1 {
+.menunumber {
+  background-color: #9356dc;
+  color: white;
   position: absolute;
-  width: 10px;
-  height: 10px;
-  background: #9356dc;
-  color: #ffffff;
-  border-radius: 50%;
-  padding: 10px;
-  font-size: 13px;
-  cursor: pointer;
+  padding: 3px 8px 3px 8px;
+  border-radius: 500px;
   margin-right: 320px;
-  margin-top: 115px;
-}
-
-.fa-2 {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: #9356dc;
-  color: #ffffff;
-  border-radius: 50%;
-  padding: 10px;
-  font-size: 13px;
-  cursor: pointer;
-  margin-right: 318px;
-  margin-top: 205px;
-}
-
-.fa-3 {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: #9356dc;
-  color: #ffffff;
-  border-radius: 50%;
-  padding: 10px;
-  font-size: 13px;
-  cursor: pointer;
-  margin-right: 318px;
-  margin-top: 295px;
-}
-
-.text1 {
-  display: none;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: #9356dc;
-  color: #ffffff;
-  border-radius: 50%;
-  padding: 10px;
-  font-size: 13px;
-  cursor: pointer;
-  margin-right: 318px;
-  margin-top: 295px;
+  margin-top: -5px;
 }
 
 /* END NAV */
@@ -193,7 +167,7 @@ nav {
 main {
   display: flex;
   flex-wrap: wrap;
-  width: 375px;
+  width: 378px;
   margin: auto;
   background-color: #f3f2f2;
   margin-bottom: 0px;
@@ -206,6 +180,7 @@ main {
   background-color: white; /*3*/
   box-shadow: 0px 5px 20px #999; /*4*/
   border-radius: 20px;
+  justify-content: center;
   margin: auto;
   margin-bottom: 30px;
 }
@@ -236,19 +211,74 @@ main {
   margin-left: 15px;
 }
 
+.fa-heart {
+  color: #ffffff(255, 255, 255);
+  position: absolute;
+  margin-left: 300px;
+  margin-top: -30px;
+  cursor: pointer;
+  border-radius: 50px;
+  background: #ffffff;
+}
+
+#logo {
+  color: #ffffff(255, 255, 255);
+  position: absolute;
+  margin-left: 300px;
+  margin-top: -30px;
+  cursor: pointer;
+  border-radius: 50px;
+  background: #ffffff;
+}
+
+.fa-heart:hover .fa-store {
+  color: #9356dc;
+  transition: 0.8s;
+  background: none;
+}
+
+.fa-heart::before {
+  color: #000000;
+  transition: 0.8s;
+  background: none;
+}
+
+.fa-heart:hover::before {
+  color: #9356dc;
+  color: linear-gradient(315deg, #9356dc, #ffffff);
+  transition: 0.8s;
+  fill: transparent;
+}
+
+.fa {
+  background-color: white;
+  color: black;
+  position: absolute;
+  padding: 3px 8px 3px 8px;
+  margin-left: 300px;
+  margin-top: -30px;
+}
+
+.fa:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  padding: 3px 0px 0px 0px;
+}
+
 /* END MAIN */
 /* START FOOTER */
 
 footer {
   display: flex;
   justify-content: left;
-  width: 315px;
+  width: 318px;
   padding: 30px;
-  background: #303030;
+  background: #353535;
   flex-wrap: wrap;
   border: 0px solid rgb(255, 225, 0); /* border area */
   margin-top: 0px;
   margin: auto;
+  margin-bottom: 20px;
 }
 
 footer div {
@@ -260,18 +290,46 @@ footer div {
 #logofooter {
   display: flex;
   width: 100%;
-  max-width: 100px;
-  margin-top: 15px;
+  margin-top: 5px;
   margin-bottom: 15px;
+  margin-left: -30px;
+}
+
+.fa-utensils {
+  display: flex;
+  position: absolute;
+  margin-left: -25px;
+}
+
+.fa-handshake-angle {
+  display: flex;
+  position: absolute;
+  margin-left: -25px;
 }
 
 .footertext {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  color: white;
+  margin-left: 20px;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 5px;
   margin-top: 5px;
   color: white;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 20px;
 }
 
 /* END FOOTER */
@@ -402,4 +460,73 @@ section {
 
 .price {
   float: right;
+}
+
+/* START HEART */
+
+.icon {
+  fill: transparent;
+  stroke: black;
+  stroke-width: 10px;
+  cursor: pointer;
+  position: relative;
+  margin-left: 300px;
+  margin-top: -35px;
+}
+
+.icon svg {
+  overflow: visible;
+  width: 1.5rem;
+}
+
+.icon path {
+  stroke-dashoffset: 0;
+  stroke-dasharray: 1550;
+  -webkit-transform-origin: center;
+  transform-origin: center;
+}
+
+.icon .heart-background {
+  display: none;
+}
+.icon .heart-main:hover path {
+  animation: stroke-animation 2s ease-in-out forwards;
+}
+
+@keyframes stroke-animation {
+  100% {
+    fill: #ff79da;
+    stroke: none;
+  }
+}
+
+/* END HEART */
+
+.box3 {
+  width: 110px;
+  height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 17px;
+  position: absolute;
+  overflow: hidden;
+  background-color: #9be4cc;
+  margin-left: 225px;
+  margin-top: 15px;
+}
+
+.b3 {
+  background: -webkit-linear-gradient(0deg, transparent 50%, #27e8a7 50%);
+  background-size: 400px 80px;
+}
+
+.b3:hover {
+  background-position: 200px 0;
+}
+
+a {
+  color: #188964;
+  text-decoration: none;
 }
