--- a/menu.css
+++ b/menu.css
@@ -127,12 +127,14 @@ a:visited {
 }
 
 .menutext2 {
-  width: 100%;
-  display: flex;
+  width: 250px;
   flex-wrap: wrap;
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: 15px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .menutext3 {
