--- a/menu.css
+++ b/menu.css
@@ -127,14 +127,12 @@ a:visited {
 }
 
 .menutext2 {
-  width: 250px;
+  width: 100%;
+  display: flex;
   flex-wrap: wrap;
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: 15px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
 }
 
 .menutext3 {
@@ -250,6 +248,9 @@ footer a {
   background-position: -100px 0;
   transition: 0.8s;
   width: 300px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 /* START HEART */
