--- a/menu.css
+++ b/menu.css
@@ -109,7 +109,7 @@ a:visited {
 }
 
 .menumenu {
-  width: 330px; /*1*/
+  width: 300px; /*1*/
   height: 70px; /*1*/
   margin-bottom: 20px;
   box-shadow: 0px 5px 20px #999; /*4*/
@@ -117,26 +117,28 @@ a:visited {
 }
 
 .menutext {
-  width: 100%;
+  max-width: 300px;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 10px;
-  margin-left: 15px;
+  margin-left: 7px;
   font-weight: bold;
   padding-top: 10px;
 }
 
 .menutext2 {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  max-width: 400px;
   margin-bottom: 10px;
   margin-top: 10px;
-  margin-left: 15px;
+  margin-left: 7px;
+  font-size: 15px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .menutext3 {
-  width: 100%;
+  max-width: 340px;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 10px;
@@ -241,13 +243,13 @@ footer a {
   background-size: 700px 80px;
   border: 0px solid #27e8a7;
   transition: 0.8s;
-  width: 335px;
+  width: 340px;
 }
 
 .menumenu:hover {
   background-position: -100px 0;
   transition: 0.8s;
-  width: 300px;
+  width: 260px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
