--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ article {
 h2 {
   display: flex;
   padding: 10px;
+  justify-content: center;
 }
 
 .text {
@@ -163,6 +164,10 @@ nav {
 
 /* END NAV */
 /* START MAIN */
+.title {
+  background-color: #f3f2f2;
+  border: 1px solid #f3f2f2;
+}
 
 main {
   display: flex;
@@ -172,6 +177,7 @@ main {
   background-color: #f3f2f2;
   margin-bottom: 0px;
   height: auto;
+  justify-content: center;
 }
 
 .menu {
@@ -597,5 +603,79 @@ a {
     transform: rotate(360deg);
     opacity: 0;
     visibility: hidden;
+  }
+}
+
+@media (min-width: 376px) {
+  body {
+    width: 100%;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  .location {
+    width: 100%;
+    padding: 0px;
+    height: 40px;
+  }
+
+  form .fa-location-dot {
+    padding: 2px 20px;
+    margin-top: 10px;
+  }
+
+  .textlocation {
+    margin-top: 10px;
+  }
+
+  form {
+    width: 100%;
+    justify-content: center;
+    margin-right: 55px;
+  }
+
+  h2 {
+    display: flex;
+  }
+
+  article {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  nav {
+    width: 100%;
+  }
+
+  .greybutton {
+    width: 50%;
+  }
+
+  main {
+    width: 100%;
+  }
+
+  .menu {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  footer {
+    justify-content: center;
+    width: 100%;
+    padding: 0px;
+  }
+
+  .footertext {
+    width: 100px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+
+  footer a {
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
 }
