--- a/index.css
+++ b/index.css
@@ -284,7 +284,6 @@ footer {
   border: 0px solid rgb(255, 225, 0); /* border area */
   margin-top: 0px;
   margin: auto;
-  margin-bottom: 20px;
 }
 
 footer div {
@@ -606,7 +605,7 @@ a {
   }
 }
 
-@media (min-width: 376px) {
+@media (min-width: 522px) {
   body {
     width: 100%;
   }
@@ -677,5 +676,6 @@ a {
   footer a {
     margin-bottom: 30px;
     margin-top: 30px;
+    margin-left: 0px;
   }
 }
