--- a/menu.css
+++ b/menu.css
@@ -25,6 +25,7 @@ article {
   justify-content: center;
   width: 350px;
   margin: auto;
+  background-color: #f3f2f2;
 }
 
 nav {
@@ -71,8 +72,8 @@ a:visited {
 
 .child-one {
   background-color: blanchedalmond;
-  width: 350px; /*1*/
-  height: 324px; /*1*/
+  width: 350px;
+  height: 324px;
 }
 
 .child-two {
@@ -80,7 +81,7 @@ a:visited {
   background-color: #f3f2f2;
   position: absolute;
   top: 310px;
-  height: 52px;
+  height: 55px;
   width: 330px;
   border-radius: 20px 20px 0px 0px;
   padding: 10px;
@@ -89,9 +90,13 @@ a:visited {
   font-style: italic;
 }
 
+h2 {
+  display: none;
+}
+
 .child-three {
   display: flex;
-  width: 340px; /*1*/
+  width: 340px;
   background-color: #f3f2f2;
   height: 20px;
   padding: 5px;
@@ -150,7 +155,7 @@ footer {
   padding: 30px;
   background: #353535;
   flex-wrap: wrap;
-  border: 0px solid rgb(255, 225, 0); /* border area */
+  border: 0px solid rgb(255, 225, 0);
   margin-top: 0px;
   margin: auto;
 }
@@ -400,3 +405,89 @@ footer a {
 }
 
 /* END MENU */
+
+@media (min-width: 536px) {
+  body {
+    width: 100%;
+    margin: auto;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  article {
+    width: 100%;
+  }
+
+  .child-one {
+    width: 100%;
+    height: 248px;
+    object-fit: cover;
+  }
+
+  .child-two {
+    width: 100%;
+    justify-content: center;
+    position: inherit;
+  }
+
+  .test {
+    display: none;
+    width: 100%;
+    border: 0px solid red;
+    border-radius: 20px 20px 0px 0px;
+    margin-top: -80px;
+    background-color: #27e8a7;
+  }
+
+  .menu {
+    margin-left: 10px;
+  }
+
+  h2 {
+    display: flex;
+  }
+
+  .icon {
+    margin-top: -60px;
+    margin-right: -40px;
+  }
+
+  nav {
+    width: 100%;
+  }
+
+  .child-three {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  footer {
+    justify-content: center;
+    width: 100%;
+    padding: 0px;
+  }
+
+  #logofooter {
+    display: flex;
+    width: 100%;
+    margin-top: -5px;
+    margin-left: -30px;
+  }
+
+  .footertext {
+    width: 100px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+
+  footer a {
+    margin-bottom: 30px;
+    margin-top: 40px;
+  }
+}
