--- a/sass/index.css
+++ b/sass/index.css
@@ -6,6 +6,116 @@ body {
   margin: auto;
 }
 
+/* Start Plate */
+.platebackground {
+  height: 100%;
+  background: #99e2d0;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20;
+  -webkit-animation: platebackground 5s linear;
+          animation: platebackground 5s linear;
+  visibility: hidden;
+}
+
+.plate {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 0px solid transparent;
+  border-top: 60px solid #99e2d0;
+  border-bottom: 60px solid #ff79da;
+  border-radius: 150%;
+  width: 200px;
+  height: 10px;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-animation: plate 2s linear;
+          animation: plate 2s linear;
+}
+
+.plateinside {
+  width: 300px;
+  height: 100px;
+  border-radius: 80%;
+  background-color: white;
+}
+
+@-webkit-keyframes platebackground {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes platebackground {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes plate {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes plate {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+/* END Plate */
 /* START HEADER */
 header {
   display: -webkit-box;
@@ -674,114 +784,6 @@ section {
 a {
   color: #188964;
   text-decoration: none;
-}
-
-.bowlbackground {
-  height: 100%;
-  background: #99e2d0;
-  margin: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 20;
-  animation: bowlbackground 5s linear;
-  -webkit-animation: bowlbackground 5s linear;
-  visibility: hidden;
-}
-
-.bowl {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 0px solid transparent;
-  border-top: 60px solid #99e2d0;
-  border-bottom: 60px solid #ff79da;
-  border-radius: 150%;
-  width: 200px;
-  height: 10px;
-  margin: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  animation: bowl 2s linear;
-  -webkit-animation: bowl 2s linear;
-}
-
-.bowlinside {
-  width: 300px;
-  height: 100px;
-  border-radius: 80%;
-  background-color: white;
-}
-
-@-webkit-keyframes bowlbackground {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-  70% {
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
-@keyframes bowlbackground {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-  70% {
-    opacity: 0.9;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
-@-webkit-keyframes bowl {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-  70% {
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
-@keyframes bowl {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-  70% {
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-    opacity: 0;
-    visibility: hidden;
-  }
 }
 
 @media (min-width: 522px) {
