--- a/sass/menu.css
+++ b/sass/menu.css
@@ -6,6 +6,7 @@ body {
   font-size: 14px;
 }
 
+/* START HEADER */
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13,61 +14,11 @@ header {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   height: 50px;
-  border: 0px solid #5eff00;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   width: 350px;
   margin: auto;
-  -webkit-box-shadow: 0px 5px 19px #999;
-          box-shadow: 0px 5px 19px #999;
-}
-
-article {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  height: 100%;
-  border: 0px solid #5eff00;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 350px;
-  margin: auto;
-  background-color: #f3f2f2;
-}
-
-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 350px;
-  background-color: #f3f2f2;
-  margin: auto;
-}
-
-.parent {
-  background-color: rgba(255, 255, 255, 0.174);
-  width: 350px;
-  max-width: 162px;
-}
-
-#logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 175px;
-  max-width: 162px;
-  margin-top: 15px;
-  margin-left: -75px;
 }
 
 .fa-arrow-left {
@@ -89,10 +40,46 @@ a:visited {
   color: black;
 }
 
+.parent {
+  width: 350px;
+  max-width: 162px;
+}
+
+#logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 175px;
+  max-width: 162px;
+  margin-top: 15px;
+  margin-left: -75px;
+}
+
+/* END HEADER */
+/* START ARTICLE */
+article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 100%;
+  border: 0px solid #5eff00;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 350px;
+  margin: auto;
+  background-color: #f3f2f2;
+}
+
 .child-one {
-  background-color: blanchedalmond;
   width: 350px;
   height: 324px;
+}
+
+h2 {
+  display: none;
 }
 
 .child-two {
@@ -111,8 +98,21 @@ a:visited {
   font-style: italic;
 }
 
-h2 {
-  display: none;
+/* END ARTICLE */
+/* START NAV */
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 350px;
+  background-color: #f3f2f2;
+  margin: auto;
 }
 
 .child-three {
@@ -137,6 +137,24 @@ h2 {
   height: 5px;
   position: absolute;
   margin-top: 25px;
+}
+
+/* END NAV */
+/* START PINKBUTTON */
+.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 350px;
+  height: 100px;
+  background-color: #f3f2f2;
+  margin: auto;
 }
 
 .pinkbutton {
@@ -171,22 +189,7 @@ h2 {
   /*4*/
 }
 
-.button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 350px;
-  height: 100px;
-  background-color: #f3f2f2;
-  margin: auto;
-}
-
+/* START ENDBUTTON */
 /* START FOOTER */
 footer {
   display: -webkit-box;
