--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -6,50 +6,15 @@ body {
   font-size: 14px;
 }
 
+/* START HEADER */
+
 header {
   display: flex;
   flex-wrap: wrap;
   height: 50px;
-  border: 0px solid rgb(94, 255, 0);
   justify-content: center;
   width: 350px;
   margin: auto;
-  box-shadow: 0px 5px 19px #999;
-}
-
-article {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-  border: 0px solid rgb(94, 255, 0);
-  justify-content: center;
-  width: 350px;
-  margin: auto;
-  background-color: #f3f2f2;
-}
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-  justify-content: center;
-  width: 350px;
-  background-color: #f3f2f2;
-  margin: auto;
-}
-
-.parent {
-  background-color: rgba(255, 255, 255, 0.174);
-  width: 350px;
-  max-width: 162px;
-}
-
-#logo {
-  display: flex;
-  width: 175px;
-  max-width: 162px;
-  margin-top: 15px;
-  margin-left: -75px;
 }
 
 .fa-arrow-left {
@@ -69,10 +34,40 @@ a:visited {
   color: black;
 }
 
+.parent {
+  width: 350px;
+  max-width: 162px;
+}
+
+#logo {
+  display: flex;
+  width: 175px;
+  max-width: 162px;
+  margin-top: 15px;
+  margin-left: -75px;
+}
+
+/* END HEADER */
+/* START ARTICLE */
+
+article {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  border: 0px solid rgb(94, 255, 0);
+  justify-content: center;
+  width: 350px;
+  margin: auto;
+  background-color: #f3f2f2;
+}
+
 .child-one {
-  background-color: blanchedalmond;
   width: 350px;
   height: 324px;
+}
+
+h2 {
+  display: none;
 }
 
 .child-two {
@@ -89,8 +84,18 @@ a:visited {
   font-style: italic;
 }
 
-h2 {
-  display: none;
+/* END ARTICLE */
+
+/* START NAV */
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  justify-content: center;
+  width: 350px;
+  background-color: #f3f2f2;
+  margin: auto;
 }
 
 .child-three {
@@ -111,6 +116,19 @@ h2 {
   height: 5px;
   position: absolute;
   margin-top: 25px;
+}
+
+/* END NAV */
+/* START PINKBUTTON */
+.button {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  justify-content: center;
+  width: 350px;
+  height: 100px;
+  background-color: #f3f2f2;
+  margin: auto;
 }
 
 .pinkbutton {
@@ -134,17 +152,7 @@ h2 {
   box-shadow: 0px 5px 30px 5px #ff79da; /*4*/
 }
 
-.button {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-  justify-content: center;
-  width: 350px;
-  height: 100px;
-  background-color: #f3f2f2;
-  margin: auto;
-}
-
+/* START ENDBUTTON */
 /* START FOOTER */
 
 footer {
