--- a/sass/menu.css
+++ b/sass/menu.css
@@ -525,7 +525,7 @@ footer a {
 }
 
 /* END MENU */
-@media (min-width: 536px) {
+@media (min-width: 570px) {
   body {
     width: 100%;
     margin: auto;
@@ -611,6 +611,116 @@ footer a {
   footer a {
     margin-bottom: 30px;
     margin-top: 40px;
+  }
+}
+
+@media (min-width: 353px) and (max-width: 569px) {
+  body {
+    width: 100%;
+    margin: auto;
+  }
+  header {
+    width: 100%;
+  }
+  article {
+    width: 100%;
+  }
+  .child-one {
+    width: 100%;
+    height: 248px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .child-two {
+    display: none;
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: inherit;
+  }
+  .test {
+    display: none;
+    width: 100%;
+    border: 0px solid red;
+    border-radius: 20px 20px 0px 0px;
+    margin-top: -80px;
+    background-color: #27e8a7;
+  }
+  .menu {
+    margin-left: 10px;
+  }
+  h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    font-size: 30px;
+    font-style: italic;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .icon {
+    margin-top: 33px;
+    margin-left: 40px;
+  }
+  nav {
+    width: 100%;
+  }
+  .child-three {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .button {
+    width: 100%;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    width: 100%;
+    padding: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #logofooter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+  }
+  .footertext {
+    width: 270px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-left: 40px;
+  }
+  footer a {
+    margin-bottom: 30px;
+    margin-top: 0px;
+    margin-left: 40px;
+  }
+}
+
+@media (min-width: 100px) and (max-width: 352px) {
+  body {
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
+  }
+  .child-one {
+    height: 330px;
   }
 }
 /*# sourceMappingURL=menu.css.map */
