--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -397,7 +397,7 @@ footer a {
 
 /* END MENU */
 
-@media (min-width: 536px) {
+@media (min-width: 570px) {
   body {
     width: 100%;
     margin: auto;
@@ -486,4 +486,114 @@ footer a {
     margin-bottom: 30px;
     margin-top: 40px;
   }
+}
+
+@media (min-width: 353px) and (max-width: 569px){
+  body {
+    width: 100%;
+    margin: auto;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  article {
+    width: 100%;
+  }
+
+  .child-one {
+    width: 100%;
+    height: 248px;
+    object-fit: cover;
+  }
+
+  .child-two {
+    display: none;
+    width: 100%;
+    justify-content: center;
+    position: inherit;
+  }
+
+  .test {
+    display: none;
+    width: 100%;
+    border: 0px solid red;
+    border-radius: 20px 20px 0px 0px;
+    margin-top: -80px;
+    background-color: #27e8a7;
+  }
+
+  .menu {
+    margin-left: 10px;
+  }
+
+  h2 {
+    display: flex;
+    position: relative;
+    font-size: 30px;
+    font-style: italic;
+    justify-content: center;
+  }
+
+  .icon {
+    margin-top: 33px;
+    margin-left: 40px;
+  }
+
+  nav {
+    width: 100%;
+  }
+
+  .child-three {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: left;
+    width: 100%;
+    padding: 0px;
+    flex-direction: column;
+  }
+
+  #logofooter {
+    display: flex;
+    width: 100px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+  }
+
+  .footertext {
+    width: 270px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-left: 40px;
+
+  }
+
+  footer a {
+    margin-bottom: 30px;
+    margin-top: 0px;
+    margin-left: 40px;
+  }
+}
+
+@media (min-width: 100px) and (max-width: 352px){
+  body {
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
+  }
+
+  .child-one {
+    height: 330px;
+}
+
 }
