--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -3,6 +3,9 @@ body {
   height: 100%;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
+  margin-left: 0px;
+  margin-right: 0px;
+  
 }
 
 /* START HEADER */
@@ -443,7 +446,7 @@ footer a {
     font-size: 30px;
     font-style: italic;
     justify-content: center;
-  }
+    }
 
   .icon {
     margin-top: 33px;
@@ -488,7 +491,7 @@ footer a {
   }
 }
 
-@media (min-width: 353px) and (max-width: 569px){
+@media (min-width: 376px) and (max-width: 569px){
   body {
     width: 100%;
     margin: auto;
@@ -525,7 +528,7 @@ footer a {
   }
 
   .menu {
-    margin-left: 10px;
+    margin-left: 0px;
   }
 
   h2 {
@@ -575,7 +578,6 @@ footer a {
     margin-bottom: 10px;
     margin-top: 0px;
     margin-left: 40px;
-
   }
 
   footer a {
@@ -585,17 +587,78 @@ footer a {
   }
 }
 
-@media (min-width: 280px) and (max-width: 352px){
+@media (min-width: 351px) and (max-width: 375px){
   body {
     width: 100%;
     margin-top: 0px;
     margin-left: 0px;
     margin-right: 0px;
+    margin-bottom: 0px;
+  }
 
+  header {
+    width: 100%;
+  }
+
+  article {
+    width: 100%;
   }
 
   .child-one {
-    height: 330px;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .child-two {
+    height: 65px;
+    width: 100%;
+    padding: 0px;
+    font-weight: 600;
+    font-size: 25px;
+    margin-left: 0px;
+    padding-top: 5px;
+  }
+
+  nav {
+    width: 100%;
+  }
+
+  .child-three {
+    width: 100%;
+    justify-content: left;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  footer {
+    width: 100%;
+    padding: 0px;
+  }
+  
+  #logofooter {
+    margin-left: 0px;
+  }
+  
+  .footertext {
+    margin-right: -20px;
+  }
+  
+  .fa-utensils {
+    margin-left: -15px;
+  }
+  
+  .fa-handshake-angle {
+    margin-left: -17px;
+
+  }
 }
 
+@media (min-width: 912px) {
+
+.child-one {
+  width: 100%;
+  height: 300px;
+}
 }
